force-app/main/default/objects/Aqua_Install_Ticket__c/Aqua_Install_Ticket__c.object-meta.xml
<CustomObject>
    <label>Aqua Install Ticket</label>
    <nameField>
        <displayFormat>AIT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aqua Install Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>