force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Aqua_Community__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Aqua Install Tickets</relationshipLabel>
    <relationshipName>Aqua_Install_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>