force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Aqua_Flags_Required__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Flags_Required__c</fullName>
    <label>Aqua Flags Required</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>