force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Close_Notes__c.field-meta.xml
<CustomField>
    <fullName>Close_Notes__c</fullName>
    <label>Close Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>