force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Coverage_Verified__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coverage Verified</label>
    <type>Checkbox</type>
</CustomField>