force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Device_Installed__c.field-meta.xml
<CustomField>
    <fullName>Device_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Device Installed</label>
    <type>Checkbox</type>
</CustomField>