force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Aqua Install Tickets (FM)</relationshipLabel>
    <relationshipName>Aqua_Install_Tickets_FM</relationshipName>
    <type>Lookup</type>
</CustomField>