force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Installed_Controller_Count__c.field-meta.xml
<CustomField>
    <fullName>Installed_Controller_Count__c</fullName>
    <label>Installed Controller Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>