force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Installed_Heads_Count__c.field-meta.xml
<CustomField>
    <fullName>Installed_Heads_Count__c</fullName>
    <label>Installed Heads Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>