force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Inventory_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Recorded</label>
    <type>Checkbox</type>
</CustomField>