force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Measuring_Cups_Required__c.field-meta.xml
<CustomField>
    <fullName>Measuring_Cups_Required__c</fullName>
    <label>Measuring Cups Required</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>