force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Photos_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Photos_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Uploaded</label>
    <type>Checkbox</type>
</CustomField>