force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Tech__c.field-meta.xml
<CustomField>
    <fullName>Tech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aqua Tech</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Aqua Install Tickets (Tech)</relationshipLabel>
    <relationshipName>Aqua_Install_Tickets_Tech</relationshipName>
    <type>Lookup</type>
</CustomField>