force-app/main/default/objects/Aqua_Install_Ticket__c/fields/Timer_Tested__c.field-meta.xml
<CustomField>
    <fullName>Timer_Tested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timer Tested</label>
    <type>Checkbox</type>
</CustomField>