force-app/main/default/objects/Aqua_Install_Ticket__c/listViews/Aqua_Closeout_Approval_Aqua_Install_Ticket.listView-meta.xml
<ListView>
    <fullName>Aqua_Closeout_Approval_Aqua_Install_Ticket</fullName>
    <filterScope>Queue</filterScope>
    <label>Aqua_Closeout_Approval</label>
    <queue>Aqua_Closeout_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>